# general-research-automation

./: .gitignore  README.md  pyproject.toml
examples/minimize_lines/: evaluate.py  gra_config.json  results.tsv  verbose_function.py
gra/: __init__.py  __main__.py  auto_config.py  cli.py  config.py  evaluator.py  graph.py  loop.py  proposer.py  tracker.py
tests/: test_cli.py  test_config.py  test_evaluator.py  test_integration.py  test_loop.py  test_proposer.py  test_tracker.py
