[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "general-research-automation"
version = "0.1.0"
description = "General AutoResearch — autonomous code optimization using LLMs. Optimize any metric on any codebase."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Raymond Xu" }]
dependencies = [
    "anthropic>=0.39.0",
    "rich>=13.0.0",
    "matplotlib>=3.5.0",
]

[project.scripts]
gra = "gra.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["gra*"]
